# quant_ws2

./: .gitignore  Dockerfile  README.md  docker-compose.yml  frames_2026-02-06_15.53.15.gv  frames_2026-02-21_23.14.25.gv  frames_2026-03-10_21.51.09.gv  frames_2026-03-11_01.16.44.gv  frames_2026-03-11_21.52.05.gv  frames_2026-03-11_23.58.52.gv  ros_entrypoint.sh
src/moveit_pnp_server/: CMakeLists.txt  package.xml
src/moveit_pnp_server/action/: MotionPlan.action
src/moveit_pnp_server/config/: motion_planning_python_api_tutorial.rviz
src/moveit_pnp_server/launch/: moveit_pnp_server.launch.py  panda_start.launch.py
src/moveit_pnp_server/meshes/: panda.srdf  tables.scene
src/moveit_pnp_server/scripts/: pick_and_place.py  scene_publisher.py  spawn_movable_box.py
src/moveit_pnp_server/src/: basic_move.cpp  plan_around_objects.cpp
